# sakApp1

./: CMakeLists.txt  deviceStatus.txt  inkSystem.txt  main.cpp  test.hpgl2
